--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -28,6 +28,7 @@
   "java.test.defaultConfig": "WPIlibUnitTests",
   "editor.tabSize": 4,
   "editor.insertSpaces": true,
+  "editor.detectIndentation": false,
   "files.trimTrailingWhitespace": true,
   "files.insertFinalNewline": true,
   "java.saveActions.organizeImports": true,
