--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,7 +1,7 @@
 {
   "robotWidth": 0.620352,
   "robotLength": 0.82067,
-  "holonomicMode": true,
+  "holonomicMode": false,
   "generateJSON": false,
   "generateCSV": false
 }
