--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,8 @@ def includeDesktopSupport = true
 // Defining my dependencies. In this case, WPILib (+ friends), and vendor libraries.
 // Also defines JUnit 5.
 dependencies {
+    implementation 'org.ini4j:ini4j:0.5.4'
+
     implementation wpi.java.deps.wpilib()
     implementation wpi.java.vendor.java()
 
