--- a/.pathplanner/settings.json
+++ b/.pathplanner/settings.json
@@ -1,7 +1,7 @@
 {
-  "robotWidth": 0.620352,
+  "robotWidth": 0.84,
   "robotLength": 0.82067,
-  "holonomicMode": false,
+  "holonomicMode": true,
   "generateJSON": false,
   "generateCSV": false
 }
